<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editProductTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_title_hint" />

    <EditText
        android:id="@+id/editProductDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_desc_hint" />

    <EditText
        android:id="@+id/editProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_price_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_product"
        android:layout_marginTop="16dp" />

</LinearLayout>
